responsive ness added to the project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,6 +24,7 @@
         <h5 class="nav-item">About</h5>
       </div>
       <img src="./assets/actions.svg" alt="actions" class="right" />
+      <i class="fa-solid fa-bars"></i>
     </nav>
     <div class="intro-section">
       <div class="left-section">
@@ -71,7 +73,9 @@
           <div class="dot tomato-dot"></div>
           <div class="dot black-dot"></div>
         </div>
-        <button class="action-btn btn">Add to chart</button>
+        <div class="btn-container">
+          <button class="action-btn btn">Add to chart</button>
+        </div>
       </div>
     </div>
   </body>
